--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["env"],
-  "plugins": ["transform-runtime"]
+  "presets": [
+    "env"
+  ],
+  "plugins": [
+    "transform-class-properties",
+    "transform-runtime"
+  ]
 }
