--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2",
+    "webpack-cli": "^3.1.1",
     "webpack-serve": "^0.3.2"
   },
   "dependencies": {
     "highlight.js": "^9.12.0",
-    "marked": "^0.3.9"
+    "marked": "^0.3.9",
+    "mathjax": "^2.7.5"
   }
 }
